gap and padding correction

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -4,7 +4,7 @@ app-main-chat {
 
 .main-component {
     display: flex;
-    gap: 50px;
+    gap: 20px;
     width: 100%;
 }
 
