--- a/src/app/workspace-components/workspace/workspace.component.scss
+++ b/src/app/workspace-components/workspace/workspace.component.scss
@@ -98,7 +98,7 @@ button {
 .workspace-menu {
     background-color: white;
     border-radius: 30px;
-    padding: 32px 16px 32px 30px;
+    padding: 32px 30px 32px 30px;
     height: -webkit-fill-available;
 
     header {
